Date column working
